--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Safe Charge</string>
+    <string name="channel_name">Safe Charge Channel</string>
+    <string name="channel_description">Run in background</string>
 </resources>
