--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,56 @@
 <resources>
-    <string name="app_name">Safe Charge</string>
-    <string name="channel_name">Safe Charge Channel</string>
-    <string name="channel_description">Run in background</string>
+    <string name="app_name" translatable="false">Safe Charge</string>
+    <string name="battery_level">Battery Level: %1$d %%</string>
+    <string name="battery_voltage">Battery Voltage: %1$d</string>
+    <string name="battery_temperature">Battery Temperature: %1$d Celsius</string>
+    <string name="pattern_error">Connect at least 4 dots. Try again</string>
+    <string name="pattern_wrong">Wrong pattern</string>
+    <string name="pattern_attempts_left">You have %1$d attempts left</string>
+    <string name="alert_in">Alert in %1$ds</string>
+    <string name="thief_detected">Damn, Robber!</string>
+    <string name="cancel">Cancel</string>
+    <string name="draw_unlock_pattern">Draw unlock pattern</string>
+    <string name="change_password">Change password</string>
+    <string name="choose_your_pattern">Choose your pattern</string>
+    <string name="next">Next</string>
+    <string name="clear">Clear</string>
+    <string name="release_finger">Release finger when done</string>
+    <string name="pattern_recorded">Pattern recored</string>
+    <string name="confirm">Confirm</string>
+    <string name="draw_pattern_again">Draw pattern again to confirm</string>
+    <string name="your_new_pattern">Your new unlock pattern</string>
+    <string name="confirm_pattern">Cofirm your pattern</string>
+    <string name="language">Language</string>
+    <string name="settings">Settings</string>
+
+
+    <string name="lang_vi_key" translatable="false">vi</string>
+    <string name="lang_vi_display" translatable="false">Tiếng Việt</string>
+    <string name="lang_vi_country" translatable="false">VN</string>
+
+    <string name="lang_en_key" translatable="false">en</string>
+    <string name="lang_en_display" translatable="false">English</string>
+    <string name="lang_en_country" translatable="false">US</string>
+
+
+    <string-array name="list_lang_keys">
+        <item>@string/lang_vi_key</item>
+        <item>@string/lang_en_key</item>
+    </string-array>
+
+    <string-array name="list_lang_countrys">
+        <item>@string/lang_vi_country</item>
+        <item>@string/lang_en_country</item>
+    </string-array>
+
+    <string-array name="list_lang_displays">
+        <item>@string/lang_vi_display</item>
+        <item>@string/lang_en_display</item>
+    </string-array>
+
+    <string-array name="list_settings">
+        <item>@string/change_password</item>
+        <item>@string/language</item>
+    </string-array>
+
 </resources>
