--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -22,4 +22,5 @@
     <string name="thief_detected">Hmm, Bỏ điện thoại xuống ngay!</string>
     <string name="language">Ngôn ngữ</string>
     <string name="settings">Cài đặt</string>
+    <string name="app_name">Sạc an toàn</string>
 </resources>
