--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Safe Charge</string>
+    <string name="app_name">Safe Charging</string>
     <string name="battery_level">Battery Level: %1$d %%</string>
     <string name="battery_voltage">Battery Voltage: %1$d</string>
     <string name="battery_temperature">Battery Temperature: %1$d Celsius</string>
@@ -15,11 +15,11 @@
     <string name="next">Next</string>
     <string name="clear">Clear</string>
     <string name="release_finger">Release finger when done</string>
-    <string name="pattern_recorded">Pattern recored</string>
+    <string name="pattern_recorded">Pattern recorded</string>
     <string name="confirm">Confirm</string>
     <string name="draw_pattern_again">Draw pattern again to confirm</string>
     <string name="your_new_pattern">Your new unlock pattern</string>
-    <string name="confirm_pattern">Cofirm your pattern</string>
+    <string name="confirm_pattern">Confirm your pattern</string>
     <string name="language">Language</string>
     <string name="settings">Settings</string>
 
@@ -32,25 +32,32 @@
     <string name="lang_en_display" translatable="false">English</string>
     <string name="lang_en_country" translatable="false">US</string>
 
+    <string name="lang_ja_key" translatable="false">ja</string>
+    <string name="lang_ja_display" translatable="false">日本語</string>
+    <string name="lang_ja_country" translatable="false">JP</string>
+
 
     <string-array name="list_lang_keys">
         <item>@string/lang_vi_key</item>
         <item>@string/lang_en_key</item>
+        <item>@string/lang_ja_key</item>
     </string-array>
 
     <string-array name="list_lang_countrys">
         <item>@string/lang_vi_country</item>
         <item>@string/lang_en_country</item>
+        <item>@string/lang_ja_country</item>
     </string-array>
 
     <string-array name="list_lang_displays">
         <item>@string/lang_vi_display</item>
         <item>@string/lang_en_display</item>
+        <item>@string/lang_ja_display</item>
     </string-array>
 
     <string-array name="list_settings">
-        <item>@string/change_password</item>
         <item>@string/language</item>
+        <item>@string/change_password</item>
     </string-array>
 
 </resources>
