--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,17 @@
         <item>@string/change_password</item>
     </string-array>
 
+    <!--Admod Unit Ids-->
+    <string name="admob_app_id" translatable="false">ca-app-pub-8948680136889526~2416005770</string>
+    <string name="banner_home_footer" translatable="false">ca-app-pub-8948680136889526/4575442866</string>
+    <string name="interstitial_full_screen" translatable="false">ca-app-pub-8948680136889526/4896497758</string>
+
+    <!-- -
+        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
+        For more information, see https://support.google.com/admob/answer/3052638
+    <!- -->
+    <string name="admob_app_id_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="banner_home_footer_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+
+
 </resources>
